--- a/showcase/blockchain/css/style.css
+++ b/showcase/blockchain/css/style.css
@@ -31,3 +31,26 @@ h1#status, #t {
 ::-webkit-scrollbar {
     width: 0px;
 }
+.st0{fill:#fff}.st1{fill:#083b54}.st2{fill:#6acad1}.st3{fill:#f59223}.st4{stroke:#f05135;stroke-width:2.5;stroke-miterlimit:10}
+.st4,.st5,.st6,.st7{fill:none}.st5,.st6,.st7,.st8{stroke-width:2.5;stroke-miterlimit:10}
+.st5{stroke:#083b54}.st6{stroke:#6acad1}.st7{stroke:#f59223}.st8{fill:#fdd9c8;stroke:#f05135}
+.st10,.st11,.st12,.st13,.st14,.st15,.st9{stroke-width:2.5;stroke-miterlimit:10}
+.st9{fill:#d3d5db;stroke:#083b54}.st10{fill:#b7b7b7;stroke: #7d7d7d;}.st11{fill:#fee5cb;stroke:#f59223}
+.st12{stroke:#f05135}.st12,.st13,.st14,.st15{fill:#fff}.st13{stroke:#083b54}
+.st14{stroke:#6acad1}.st15{stroke:#f59223}.st16{fill:#e0f2f3}.st17,.st18{stroke-linejoin:round}
+.st17{stroke:#d3d5db;stroke-miterlimit:10;fill:#d3d5db}.st18{fill:#fff;stroke-width:2.5}
+.st18,.st19,.st20{stroke:#5a5a5a;stroke-miterlimit:10}.st19{stroke-linejoin:round;fill:#e0f2f3;stroke-width:2.5}
+.st20{fill:none;stroke-width:1.5}.st21{fill:#d3d5db}.st22{fill:#fff}.st23,.st24{fill:none;stroke:#f05135;stroke-miterlimit:10}
+.st24{stroke:#d3d5db;stroke-width:.5}.st25,.st26{stroke:#063b54}.st25,.st26,.st27,.st28{stroke-miterlimit:10}
+.st25{stroke-linejoin:round;fill:#083b54;stroke-width:.5}.st26{stroke-width:.7}.st26,.st27,.st28{fill:none}
+.st27{stroke:#d3d5db;stroke-width:.3}.st28{stroke:#6acad1;stroke-width:2.5;stroke-linejoin:round}.st29{fill:#4caf50a6}
+.st30{fill:none;stroke:#f05135;stroke-width:2.5;stroke-linecap:round}
+.st30,.st31,.st32{stroke-miterlimit:10}.st31{stroke-linejoin:round;fill:#083b54;stroke:#063b54}
+.st32,.st33{fill:none;stroke:#e0f2f3}.st33{stroke:#6acad1;stroke-linecap:round}
+.st33,.st34,.st35{stroke-linejoin:round;stroke-miterlimit:10}
+.st34{stroke-width:2.5;stroke-linecap:round;fill:none;stroke:#6acad1}.st35{fill:#f05135;stroke:#f05235}
+.st36{stroke:#f05135;stroke-width:2;stroke-linecap:round}.st36,.st37,.st38,.st39,.st40{fill:none;stroke-miterlimit:10}
+.st37{stroke-linecap:round;stroke:#e0f2f3;stroke-width:1.5}
+.st38{stroke:#063b54;stroke-width:2.5}
+.st39,.st40{stroke:#fcc941;stroke-width:2}
+.st40{stroke:#fff}
