--- a/showcase/blockchain/css/style.css
+++ b/showcase/blockchain/css/style.css
@@ -25,7 +25,7 @@ h1 {
     font-weight: 900;
 }
 h1#status, #t {
-    color: #fe1bb1;
+    color: blue;
     margin-top: -20px;
     /* background: #000; */
     /* padding: 2px; */
