--- a/showcase/blockchain/css/style.css
+++ b/showcase/blockchain/css/style.css
@@ -33,7 +33,8 @@ h1#status, #t {
     border-radius: 5px;
 }
 ::-webkit-scrollbar {
-    width: 0px;
+    width: 10px;
+    background: coral;
 }
 .st0{fill:#fff}.st1{fill:#083b54}.st2{fill:#6acad1}.st3{fill:#f59223}.st4{stroke:#f05135;stroke-width:2.5;stroke-miterlimit:10}
 .st4,.st5,.st6,.st7{fill:none}.st5,.st6,.st7,.st8{stroke-width:2.5;stroke-miterlimit:10}
