--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #aaa  url(https://images.unsplash.com/photo-1456428199391-a3b1cb5e93ab?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1425) center no-repeat;
+  background: #aaa  url(https://static.vecteezy.com/system/resources/previews/000/092/134/original/plants-pattern-background-vector.jpg) center no-repeat;
   background-size: container;
   background-attachment: fixed;
 }
