--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 }
 
 body > h1 {
-  color: #fff;
+  color: #000;
+  font-weight: bolder;
   text-align: center;
   font-family: serif;
   font-size: 55px;
