--- a/3.css
+++ b/3.css
@@ -13,6 +13,7 @@ body {
 	-webkit-box-shadow: 0 0 0.5em rgba(255,255,255,0.2);
 	-moz-box-shadow: 0 0 0.5em rgba(255,255,255,0.2);
 	box-shadow: 0 0 0.5em rgba(255,255,255,0.2);
+	    top: 30vh;
 }
 
 .switch label {
