--- a/3.css
+++ b/3.css
@@ -13,6 +13,19 @@ iframe#frame {position: absolute;border: 0;width: 100%;padding: 0;margin: 0;left
 	box-shadow: 0 0 7em 20px rgb(0, 0, 0);
 	    top: 30vh;
 }
+
+.cover {
+    display: inline;
+    position: absolute;
+    visibility: visible;
+    border-radius: 15.5em;
+    top: 30vh;
+    z-index: 35;
+    background: #0000007a;
+    width: 60%;
+    height: 20%;
+    left: 20%;
+}
 .switch label {
 	width: 100%;
 	height: 100%;
