--- a/3.css
+++ b/3.css
@@ -289,7 +289,7 @@ iframe#frame {position: absolute;border: 0;width: 100%;padding: 0;margin: 0;left
 	width: 100%;
 	position: absolute;
 	left: 0;
-	color: #666;
+	color: #ffffff;
 	font-family: arial, verdana, sans-serif;
 	font-weight: bold;
 	text-align: center;
