--- a/tetris/test/style.css
+++ b/tetris/test/style.css
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
   width: 5px;
   height: 1px;
+  border: 1px dashed white;
      }
 ::-webkit-scrollbar-button {
   width: 1px;
