--- a/$/css/style.css
+++ b/$/css/style.css
@@ -45,7 +45,7 @@ nav{
 nav ul {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: center;opacity:0;
 }
 
 nav ul li {
