--- a/$/css/style.css
+++ b/$/css/style.css
@@ -14,7 +14,7 @@ body{
   font-size: 18px;
   line-height: 1.6;
   background-image: url(https://metaprotocol.github.io/media/map2.svg);
-  background-size: contain;
+  background-size: cover;
 }
 
 .container{
